File picker fixed, highlight start, stop and restriction sites, text wrapping

--- a/Tool/QGEM.css
+++ b/Tool/QGEM.css
@@ -1,3 +1,26 @@
+span.startSite {
+	color: #4dff4d;
+}
+
+span.stopSite {
+	color: #ff0000;
+}
+
 span.cutSite { 
-	background-color: #ffff00
+	background-color: #00d0ff;
+}
+
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+p.ow {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	font-family: "Courier New", monospace
 }
